# EcosysQT

./: .gitignore  BehaviourTree.drawio  CMakeLists.txt  CMakePresets.json  DataStru.drawio  DataStruCN.drawio  DataStruTick.drawio  DataStruTickEN.drawio  DataStructures.h  DataType.drawio  EcosysQT.code-workspace  Estate.drawio  Factory.drawio  IBackendInterface.h  InteractionRequest.drawio  README_vcpkg.md  Readme.md  SpacialGrid.drawio  TestBackend.cpp  TestBackend.h  ThreadPool.drawio  Widget.cpp  Widget.h  build.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_resources.qrc  setup_vcpkg.bat  setup_vcpkg.ps1  vcpkg.json
backend/: problem.md
backend/include/: ecosystem.h  species.h  species_factory.h  utils.h
backend/models/: animal.cpp  ecosystem.cpp  species.cpp  species_base.cpp  species_factory.cpp
backend/models/species/: cow.cpp  grass.cpp  tiger.cpp
